fixed spacing issues

--- a/public_html/css/home.css
+++ b/public_html/css/home.css
@@ -5,6 +5,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     caret-color: transparent;
+    margin: 0;
 }
 
 .ongoing {
@@ -24,7 +25,7 @@ body {
     background-color: #074d5c;
     font-family: 'Courier New', Courier, monospace;
     color: white;
-    padding-right: 28%;
+    padding-right: 30%;
 }
 
 .flex {
@@ -37,12 +38,10 @@ body {
 }
 
 .flex > div {
-    width: 5%;
+    width: 15%;
     color: white;
     text-align: center;
     font-size: larger;
-    line-height: 55px;
-    margin: 5px;
     cursor: pointer;
 }
 
@@ -63,59 +62,12 @@ body {
     background-image: url('images/homeTableBackground.png');
     padding-top: 1px;
     text-align: center;
-    margin-left: 35.5%;
+    margin: auto;
     width: 45rem;
     height: 30rem;
     border-radius: 5%;
     border: 1px solid #fff;
     font-size: xx-large;
-}
-
-.admin {
-    text-align: center;
-    width: 40rem;
-    height: 30rem;
-    border-radius: 5%;
-    margin-left: 36%;
-    font-size: xx-large;
-}
-
-.create {
-    height: 10%;
-    width: 22%;
-    margin-left: 15%;
-    margin-top: 13%;
-    font-size: 1rem;
-    text-align: center;
-    cursor: pointer;
-    background-color: transparent;
-    color: white;
-    border: 1px solid white;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 4rem;
-}
-
-.create:hover {
-    background:#732b86;
-}
-
-.edit {
-    height: 10%;
-    width: 20%;
-    margin-left: 28%;
-    margin-top: 13%;
-    font-size: 1rem;
-    text-align: center;
-    cursor: pointer;
-    background-color: transparent;
-    color: white;
-    border: 1px solid white;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 4rem;
-}
-
-.edit:hover {
-    background:#732b86;
 }
 
 .instructions {
@@ -129,7 +81,7 @@ body {
     background-color: #000;
     background-position: center;
     background-size: cover;
-    margin-left: 14%;
+    margin: auto;
     font-size: xx-large;
 }
 
