--- a/public_html/css/rulesets.css
+++ b/public_html/css/rulesets.css
@@ -5,6 +5,7 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     caret-color: transparent;
+    margin: 0;
 }
 
 .header {
